Make port selection system.

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -361,6 +361,9 @@
  <Reference Include="Unity.Analytics.Tracker">
  <HintPath>D:/tone/Projects/Akaoni3D/Library/PackageCache/com.unity.analytics@3.3.2/Unity.Analytics.Tracker.dll</HintPath>
  </Reference>
+ <Reference Include="UnityEngine.Purchasing">
+ <HintPath>D:/tone/Projects/Akaoni3D/Library/PackageCache/com.unity.purchasing@2.0.6/UnityEngine.Purchasing.dll</HintPath>
+ </Reference>
  <Reference Include="netstandard">
  <HintPath>C:/Program Files/Unity/Hub/Editor/2019.1.8f1/Editor/Data/NetStandard/ref/2.0.0/netstandard.dll</HintPath>
  </Reference>
